2006-07-23  Brent Smith  <gnome@nextreality.net>

	* configure.in: Depend on beagle 0.2.4 since that is the first version
	with the beagle_util_daemon_is_running() function.
	* src/yelp-search-pager.c: (search_pager_class_init):
	Use beagle_util_daemon_is_running() to make sure that the daemon is
	actually running, and the socket at ~/.beagle/socket is not stale.
	Fixes #348362

2006-07-23  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	Large basic search update:
	 - Common words are ignored (how, do etc.)
	 - Common suffixes and prefixes are checked
	 - Fix problems with searching in some docbook docs
	 - Better scoring mechanism
	 - Slightly improved matching algorithm
	 - Fix searching HTML docs
	 - Better snippet highlighting
	 - Clean sections of code slightly
	Bugs fixed: #341797, #341800, #347819 (work around)
	Partially fixed: #335962
	

	* src/yelp-settings.c: 
	Use a gtk_link_button instead of gnome_href

	* src/yelp-print.c: 
	* src/yelp-print.h: 
	* src/yelp-gecko-services.cpp: 
	* src/yelp-gecko-services.h: 
	* src/Yelper.cpp: 
	* configure.in: 
	Move to GtkPrinting.
	Bump min gtk version to 2.10
	Remove libgnomeprint dependency
	
2006-07-22  Don Scorgie  <dscorgie@cvs.gnome.org>

	* configure.in: 
	Remove additional but not run pkg-config check

	* src/yelp-window.c: 
	Remove a couple of headers that shouldn't be here
	Remove call to gnome_help_display_desktop and
	replace with a much simpler call to create a new window
	and show the relevant section of the user guide, making it 
	much quicker to display help->Contents
	
	* src/yelp-html.cpp: 
	* src/yelp-window.c: 
	Remove libgnomeui dependancy from both.
	Switch to GTK_STOCK_ABOUT instead of libgnome equivalent
	
2006-07-21  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-window.c: 
	* src/yelp-search-pager.c: 
	Clean up some compiler warnings
	(Casts and unused variables)

2006-07-19  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-toc-pager.c: