@@ -1,3 +1,10 @@
+2006-07-24  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-search-pager.c: 
+	* stylesheets/search2html.xsl: 
+	Add a new link to the search results to allow
+	repeating the search online at the GNOME support forums
+	
 2006-07-23  Brent Smith  <gnome@nextreality.net>
 
 	* configure.in: Depend on beagle 0.2.4 since that is the first version
